Fri Oct 30 09:57:22 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* gems/bundled_gems: update latest gems.
	  test-unit-3.1.5 and minitest-5.8.2

Fri Oct 30 09:54:05 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* lib/rubygems: Update to RubyGems HEAD(60d7972).
	  this version contains pull requests number of #1343, #1356, #1357, #1363
	  at https://github.com/rubygems/rubygems/pulls
	* test/rubygems: ditto.

Fri Oct 30 07:38:29 2015  Koichi Sasada  <ko1@atdot.net>

	* insns.def (getinlinecache/setinlinecache): compare ic->ic_cref and
	  current cref only when cached CREF list includes singleton class.

	  Singleton classes have own namespaces, so that we need to check
	  cref as a key (#10943).

	  However, if current CREF list does not include singleton class,
	  no need to check CREF beacuse it should be same name space.

	* vm_insnhelper.c (vm_get_const_key_cref): add a function returns
	  CREF only when it includes singleton class.

	* vm_core.h: constify iseq_inline_cache_entry::ic_cref.

Fri Oct 30 06:43:50 2015  Koichi Sasada  <ko1@atdot.net>

	* vm_insnhelper.c (vm_env_cref): make it inline for performance.

	* vm_insnhelper.c (rb_vm_get_cref): use NULL instead of 0.

Fri Oct 30 06:20:40 2015  Koichi Sasada  <ko1@atdot.net>

	* insns.def: nobody set ic->ic_value.value to Qundef.

Fri Oct 30 06:15:50 2015  Koichi Sasada  <ko1@atdot.net>

	* vm.c: add ifndef guard for VM_CHECK_MODE.

Fri Oct 30 06:13:10 2015  Koichi Sasada  <ko1@atdot.net>

	* vm_insnhelper.c (vm_check_frame_detail): should require me for
	  VM_FRAME_FLAG_BMETHOD type frame.

Thu Oct 29 18:42:30 2015  Koichi Sasada  <ko1@atdot.net>

	* gc.c (gc_mark_ptr): specify NOINLINE so that gc_mark() can return
	  immediately when obj is not a markable object.

Thu Oct 29 18:05:22 2015  Koichi Sasada  <ko1@atdot.net>

	* encoding.c (rb_enc_check_str): add for performance.
	  This function only accepts T_STRING (and T_REGEXP).

	  This patch improves performance of a tiny_segmenter benchmark