@@ -1318,7 +1318,7 @@ void rb_gc_mark_global_tbl(void);
 void rb_mark_generic_ivar(VALUE);
 VALUE rb_const_missing(VALUE klass, VALUE name);
 
-int rb_st_insert_id_and_value(VALUE obj, st_table *tbl, ID key, VALUE value);
+int rb_st_insert_id_and_value(VALUE obj, ID key, VALUE value);
 st_table *rb_st_copy(VALUE obj, struct st_table *orig_tbl);
 
 /* gc.c (export) */
